eval binary operator